# wiki

./: README.md  package-lock.json  package.json
.github/workflows/: pages.yml
.wiki/: manifest.db  settings.json
.wiki/jobs/: import-notion-2026-04-06t13-12-02-908115-00-00.json  import-notion-2026-04-06t14-36-06-619690-00-00.json
site/: index.html
site/thesis/: index.html
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: export_apple_notes.js
src-tauri/src/: importers.rs  inbox.rs  index.rs  lib.rs  models.rs  providers.rs  util.rs  vault.rs  workflows.rs
src/components/: EditorPane.tsx  InspectorPane.tsx  Modal.tsx  Sidebar.tsx
src/lib/: api.ts
system/: AGENTS.md  index.md  log.md
