[package]
name = "tanushwiki"
version = "0.1.0"
description = "A macOS-first LLM wiki for Notion and Apple Notes"
authors = ["Tanush Sawhney"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
html2md = "0.2.15"
imap = "3.0.0-alpha.15"
keyring = "2.3.3"
mailparse = "0.16.1"
pathdiff = "0.2.3"
pdf-extract = "0.10.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.39.0", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
similar = "2.7.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2"
tempfile = "3.23.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
zip = "8.5.0"
